# linux-rockchip

./: AndroidKernel.mk  android-4.4.cfg
arch/arm/: Kconfig
arch/arm/common/: fiq_debugger.c  gic.c
arch/arm/configs/: rk2926_sdk_defconfig  rk2926_tb_defconfig  rk2926_v86_defconfig  rk2928_tb_defconfig  rk3026_86v_android-4.4_defconfig  rk3026_86v_defconfig  rk3026_tb_defconfig  rk3028a_86v_4.4_defconfig  rk3028a_tb_defconfig  rk3066_sdk_android-4.4_defconfig  rk3066_sdk_defconfig  rk30_box_costdown_kikat_defconfig  rk30_box_pizza2_kikat_defconfig  rk30_box_pizza_kikat_defconfig  rk30_ds975_4.4_defconfig  rk30_ds975_defconfig  rk30_hamburger_defconfig  rk30_hamburger_ti_defconfig  rk30_hotdog_defconfig  rk30_hotdog_overlay_defconfig  rk30_hotdog_ti_defconfig  rk30_hotdog_ti_kikat_defconfig  rk30_pizza2_defconfig  rk30_pizza_defconfig  rk3168_86v_android-4.4_defconfig  rk3168_86v_codec_android-4.4_defconfig  rk3168_rk616_86v_android-4.4_defconfig  rk3168_tb_android-4.4_defconfig  rk3168_tb_defconfig  rk3168m_tb_defconfig  rk3188_LR097_android-4.4_defconfig  rk3188_LR097_defconfig  rk3188_box_costdown_kitkat_defconfig  rk3188_box_pancake_kitkat_defconfig  rk3188_costdown_dcdc_kitkat_defconfig  rk3188_costdown_defconfig  rk3188_ds1006h_android-4.4_defconfig  rk3188_ds1006h_defconfig  rk3188_ds1006h_v1_0_defconfig  rk3188_ds1006h_v1_1_android-4.4_defconfig  (+12 more)
arch/arm/mach-rk2928/: board-rk2926-sdk.c  board-rk2928-phonepad-sdmmc.c  board-rk2928-sdk-sdmmc.c  board-rk2928-sdk.c  board-rk2928-tb.c  common.c  devices.c
arch/arm/mach-rk30/: Kconfig  Makefile  board-LR097-sdmmc-config.c  board-pmu-act8846.c  board-pmu-ricoh619.c  board-pmu-rk808.c  board-pmu-rk818.c  board-pmu-rt5025.c  board-pmu-tps65910.c  board-rk30-box.c  board-rk30-ds975.c  board-rk30-phonepad.c  board-rk30-ps2-vehicle-sdmmc-config.c  board-rk30-ps2-vehicle.c  board-rk30-sdk-camera.c  board-rk30-sdk-sdmmc.c  board-rk30-sdk-tps65910.c  board-rk30-sdk-vmac.c  board-rk30-sdk-wm8326.c  board-rk30-sdk.c  board-rk3028-86v-sdmmc-conifg.c  board-rk3028-tb-sdmmc-conifg.c  board-rk31-sdk-vmac.c  board-rk31-vmac.c  board-rk3168-86v-camera.c  board-rk3168-86v-old-sdmmc-config.c  board-rk3168-86v-sdmmc-config.c  board-rk3168-86v.c  board-rk3168-LR097.c  board-rk3168-ds1006h-sdmmc-config.c  board-rk3168-ds1006h.c  board-rk3168-tb-camera.c  board-rk3168-tb-sdmmc-conifg.c  board-rk3168-tb.c  board-rk3168m-tb-sdmmc-conifg.c  board-rk3168m-tb.c  clock_data-rk3066b.c  clock_data.c  common.c  cpufreq.c  (+9 more)
arch/arm/mach-rk3026/: Kconfig  Makefile  board-rk3026-86v-fac.c  board-rk3026-86v-sdmmc-config.c  board-rk3026-86v.c  board-rk3026-tb-sdmmc-config.c  board-rk3026-tb.c  board-rk3028a-86v-sdmmc-config.c  board-rk3028a-86v.c  board-rk3028a-tb-sdmmc-config.c  board-rk3028a-tb.c  clock_data.c  dvfs.c
arch/arm/mach-rk3188/: Kconfig  Makefile  board-rk31-vmac.c  board-rk3188-ac-sdmmc-config.c  board-rk3188-ac.c  board-rk3188-box.c  board-rk3188-ds1006h-sdmmc-config.c  board-rk3188-ds1006h.c  board-rk3188-jettaplus.c  board-rk3188-notebook-sdmmc-config.c  board-rk3188-notebook.c  board-rk3188-sdk.c  board-rk3188-u30gt2-sdmmc-config.c  board-rk3188-u30gt2.c  board-rk3188m-tb.c  clock_data.c  cpufreq.c  dvfs.c  io.c
arch/arm/mach-rockchip/: Kconfig  Makefile  cpu.c  ddr_freq.c  ddr_rk32.c  dvfs.c  efuse.c  pm-rk3288.c  pvtm.c  rknandbase.c  vcodec_service.c
arch/arm/plat-rk/: Kconfig  Makefile  clock.c  (+14 more)
drivers/: Kconfig  Makefile
drivers/base/: sw_sync.c
drivers/bluetooth/: Kconfig  Makefile  rtk_btusb.c  rtk_btusb.h
drivers/cpufreq/: rockchip-cpufreq.c
drivers/efuse/: Kconfig  Makefile  rk29-cpu-id.uu  rk29efuse.h  rk29efuse.uu
drivers/gpio/: Makefile  gpio-rk30.c
drivers/headset_observe/: rk_headset.c  rk_headset.h
drivers/hsadc/: Kconfig  Makefile  rk_hsadc.c  rk_hsadc.h
drivers/hwmon/: rockchip-hwmon.c
drivers/input/: Kconfig  Makefile  rk-lid.c
drivers/iommu/: rockchip-iommu.c
drivers/media/: Kconfig  Makefile
drivers/media/rkdtv/DIBCom1009XH-IN3362/Sample/Dta/OS_Linux/: CMakeLists.txt  DibMsgTypes.h  Makefile  Net.txt  OsDebug.h  bootstrap.sh  dvb_pvr2  dvb_pvr3
drivers/media/rkdtv/DIBCom1009XH-IN3362/Sample/Dta/OS_Linux/PVR/: dvb.3.1.1.loop  dvb.3.3.1.init
drivers/media/rkdtv/DIBCom1009XH-IN3362/Sample/LinuxDriverLibrary/: CMakeLists.txt  DibExtApiToBatchWriter.c  Makefile  gitref.h.in
drivers/media/rkdtv/DIBCom1009XH-IN3362/Sample/LinuxDriverLibrary/cmake/: GetGitRevisionDescription.cmake
drivers/media/rkdtv/DIBCom1009XH/Sample/LinuxDriverLibrary/: CMakeLists.txt  gitref.c
drivers/mfd/: Kconfig  Makefile  ricoh619-irq.c  ricoh619.c  rk1000-core.c  rk616-core.c  rk616-vif.c  rk818-irq.c  rk818.c  rt5025-irq.c
drivers/misc/: Kconfig  Makefile  hsic_hub_reset.c  tcc_bt_dev.c
drivers/mtd/: mtd_blkdevs.c  mtdblock.c  mtdpart.c
drivers/mtk_wcn_bt/: bt_eirq_handler.c  bt_hwctl.h  bt_hwctl_dev.c
drivers/net/: Kconfig  Makefile  rk29_vmac.c  rk29_vmac.h
drivers/pinctrl/: pinctrl-rockchip.c
drivers/power/: Kconfig  Makefile  cw2015_battery.c  ricoh619-battery.c  rk30_factory_adc_battery.c  rk818_battery.c  rt5025-battery.c  rt5025-power.c  rt5025-swjeita.c  test_power.c
drivers/regulator/: Kconfig  Makefile  act8846.c  rk30-pwm-regulator.c
drivers/rtc/: Kconfig  Makefile  rtc-ricoh619.c  rtc-rk818.c
drivers/spi/: rk29_spim.c  spi-rockchip-core.h  spi_test.c
drivers/staging/: Kconfig  Makefile
drivers/switch/: switch_class.c
drivers/usb/: Kconfig  Makefile
fs/: block_dev.c  timerfd.c
fs/partitions/: Makefile  check.c  msdos.c  mtdpart.c
include/linux/: alarmtimer.h  bp-auto.h  combo_mt66xx.h  ct36x.h  display-sys.h  linux_logo.h  posix-timers.h  rk_baseband.h  rk_fb.h  rk_ipc.h  rk_screen.h  sensor-dev.h
include/media/: camsys_head.h
include/sound/: pcm_params.h
kernel/: sysctl.c
kernel/time/: alarmtimer.c
mm/: page_alloc.c
net/ipv6/: ping.c
net/netfilter/: xt_qtaguid.c
net/rfkill/: rfkill-rk.c  rfkill-wlan.c
net/wireless/: Kconfig  nl80211.c
scripts/: setlocalversion
sound/soc/: soc-dmaengine-pcm.c
sound/usb/: card.c  clock.c  endpoint.c  mixer.c  urb.c
(+1431 files in other folders)
